--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Chikashi Miyama</title>
 	<link rel="stylesheet" href="css/styles.css">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header>
 	<div class="name-box">
-		<h1> Chikashi Miyama </h1>
+		<h1 id="name">Chikashi Miyama</h1>
 		<span id="job-title">Creative Coder</span>
 	</div>
-	<div class="logo-box">
-		<img src="img/logo.png" alt="logo">
+	<div id="logo-box">
+		<img src="img/logo.svg" alt="logo">
 	</div> 
 </header>
-<article class="bio-box">
-	<img id="portrait" src="img/portrait.jpeg">
-Dr. Chikashi Miyama is a composer, performer, software developer, generative video artist, and interface designer,. He received a MA (Sonology/2004) from Kunitachi College of Music, Tokyo, Japan, a Nachdiplom (Komposition im Elektronischen Studio/2007) from Music academy of Basel, Switzerland, and a Ph.D (Composition/2011) from University at Buffalo, New york, USA. In 2011, he received a research grant from DAAD (German Academic Exchange Service) and worked as a visiting researcher at ZKM, Karlsruhe, Germany. He has taught computer music at University at Buffalo, USA,  Music Academy Basel, and College of Arts Bern, Switzerland. Between 2015 and 2017, He worked as a research associate in the field of software development and developed Zirkonium Ver 3 and other various projects that involve audio-visual interaction. He is currently teaching at College of Music and Dance, Cologne, and working as a software developer at ICST Zürich. In 2013, His new book about PureData was published.</p>
-</article>
-<div class="portfolio-box">
+<section class="bio-box">
+	<img id="portrait" src="img/portrait.jpeg" alt="portrait">
+<h3>Biography</h3>
+<p>Dr. Chikashi Miyama is a composer, performer, software developer, generative video artist, and interface designer,. He received a MA (Sonology/2004) from Kunitachi College of Music, Tokyo, Japan, a Nachdiplom (Komposition im Elektronischen Studio/2007) from Music academy of Basel, Switzerland, and a Ph.D (Composition/2011) from University at Buffalo, New york, USA. In 2011, he received a research grant from DAAD (German Academic Exchange Service) and worked as a visiting researcher at ZKM, Karlsruhe, Germany. He has taught computer music at University at Buffalo, USA,  Music Academy Basel, and College of Arts Bern, Switzerland. Between 2015 and 2017, He worked as a research associate in the field of software development and developed Zirkonium Ver 3 and other various projects that involve audio-visual interaction. He is currently teaching at College of Music and Dance, Cologne, and working as a software developer at ICST Zürich. In 2013, His new book about PureData was published.</p>
+</section>
 <h3>Featured Works</h3>
+<div class="portfolio-box">
 	<figure class="work-figure">
 		<img src="img/sonorama.jpg" alt="Sonorama" class="work-image">
 		<figcaption>Sonorama (Windows/C++)</figcaption>
@@ -34,7 +36,6 @@ Dr. Chikashi Miyama is a composer, performer, software developer, generative vid
 		<figcaption>ZirkPad (iOS/Swift)</figcaption>
 	</figure>
 </div>
-
 <footer id="copyright">Copyright © 2018 Chikashi Miyama</footer>
 </body>
 </html>
