--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="global-frame">
 <header>
-	<div class="name-box">
+	<div id="name-box">
 		<h1 id="name">Chikashi Miyama</h1>
 		<span id="job-title">Creative Coder</span>
 	</div>
@@ -17,25 +18,34 @@
 	</div> 
 </header>
 <section class="bio-box">
-	<img id="portrait" src="img/portrait.jpeg" alt="portrait">
+	<img id="portrait" src="img/portrait.jpg" alt="portrait">
 <h3>Biography</h3>
-<p>Dr. Chikashi Miyama is a composer, performer, software developer, generative video artist, and interface designer,. He received a MA (Sonology/2004) from Kunitachi College of Music, Tokyo, Japan, a Nachdiplom (Komposition im Elektronischen Studio/2007) from Music academy of Basel, Switzerland, and a Ph.D (Composition/2011) from University at Buffalo, New york, USA. In 2011, he received a research grant from DAAD (German Academic Exchange Service) and worked as a visiting researcher at ZKM, Karlsruhe, Germany. He has taught computer music at University at Buffalo, USA,  Music Academy Basel, and College of Arts Bern, Switzerland. Between 2015 and 2017, He worked as a research associate in the field of software development and developed Zirkonium Ver 3 and other various projects that involve audio-visual interaction. He is currently teaching at College of Music and Dance, Cologne, and working as a software developer at ICST Zürich. In 2013, His new book about PureData was published.</p>
+<p>Dr. Chikashi Miyama received a MA (Sonology/2004) from Kunitachi College of Music, Tokyo, Japan, a Nachdiplom (Komposition im Elektronischen Studio/2007) from Music academy of Basel, Switzerland, and a Ph.D (Composition/2011) from University at Buffalo, New york, USA. In 2011, he received a research grant from DAAD (German Academic Exchange Service) and worked as a visiting researcher at ZKM, Karlsruhe, Germany. He has taught computer music at University at Buffalo, USA,  Music Academy Basel, and College of Arts Bern, Switzerland. In 2013, His new book about PureData was published. Between 2015 and 2017, He worked as a research associate in the field of software development and developed Zirkonium Ver. 3. He is currently teaching at College of Music and Dance, Cologne, and working as a software developer at ICST Zürich.</p>
 </section>
-<h3>Featured Works</h3>
-<div class="portfolio-box">
-	<figure class="work-figure">
-		<img src="img/sonorama.jpg" alt="Sonorama" class="work-image">
-		<figcaption>Sonorama (Windows/C++)</figcaption>
-	</figure>
-	<figure  class="work-figure">
-		<img src="img/zirkonium.png" alt="Zirkonium" class="work-image">
-		<figcaption>Zirkonium (MacOS/Obj-C)</figcaption>
-	</figure>
-	<figure class="work-figure">
-		<img src="img/zirkpad.png" alt="ZirkPad" class="work-image">
-		<figcaption>ZirkPad (iOS/Swift)</figcaption>
-	</figure>
-</div>
+<section class="featured-works-box">
+	<h3>Featured Works</h3>
+	<div id="portfolio-box">
+		<figure>
+			<a href="https://github.com/chikashimiyama/sonorama">
+				<img src="img/sonorama.jpg" alt="Sonorama" class="work-image">
+				<figcaption>Sonorama (Windows/C++)</figcaption>
+			</a>
+		</figure>
+		<figure >
+			<a href="http://zkm.de/zirkonium/">
+				<img src="img/zirkonium.png" alt="Zirkonium" class="work-image">
+				<figcaption>Zirkonium (MacOS/Obj-C)</figcaption>
+			</a>
+		</figure>
+		<figure>
+			<a href="https://itunes.apple.com/us/app/zirkpad/id1125327605?mt=8">
+				<img src="img/zirkpad.png" alt="ZirkPad" class="work-image">
+				<figcaption>ZirkPad (iOS/Swift)</figcaption>
+			</a>
+		</figure>
+	</div>
+</section>
 <footer id="copyright">Copyright © 2018 Chikashi Miyama</footer>
+</div>
 </body>
 </html>
