--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
 <div class="global-frame">
 <header>
-	<div id="name-box">
-		<h1 id="name">Chikashi Miyama</h1>
-		<span id="job-title">Creative Coder</span>
+	<div class="name-box">
+		<h1 class="name">Chikashi Miyama</h1>
+		<span class="job-title">Creative Coder</span>
 	</div>
-	<div id="logo-box">
+	<div class="logo-box">
 		<img src="img/logo.svg" alt="logo">
 	</div>
 </header>
 <section class="bio-box">
-	<img id="portrait" src="img/portrait.jpg" alt="portrait">
+	<img class="portrait" src="img/portrait.jpg" alt="portrait">
 	<h3>Biography</h3>
 	<p>Dr. Chikashi Miyama received a MA (Sonology/2004) from Kunitachi College of Music, Tokyo, Japan, a Nachdiplom (Komposition im Elektronischen Studio/2007) from Music academy of Basel, Switzerland, and a Ph.D (Composition/2011) from University at Buffalo, New york, USA. In 2011, he received a research grant from DAAD (German Academic Exchange Service) and worked as a visiting researcher at ZKM, Karlsruhe, Germany. He has taught computer music at University at Buffalo, USA, Music Academy Basel, and College of Arts Bern, Switzerland. In 2013, His new book about PureData was published. Between 2015 and 2017, He worked as a research associate in the field of software development and developed Zirkonium Ver. 3. He is currently teaching at College of Music and Dance, Cologne, and working as a software developer at ICST Zürich.</p>
 </section>
 <section class="featured-works-box">
 	<h3>Featured Works</h3>
-	<div id="portfolio-box">
+	<div class="portfolio-box">
 		<figure>
 			<a href="https://github.com/chikashimiyama/sonorama">
 				<img src="img/sonorama.jpg" alt="Sonorama" class="work-image">
@@ -45,7 +45,7 @@
 		</figure>
 	</div>
 </section>
-<footer id="copyright">Copyright © 2018 Chikashi Miyama</footer>
+<footer class="copyright">Copyright © 2018 Chikashi Miyama</footer>
 </div>
 </body>
 </html>
