portrait with srcset

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 </header>
 <section class="bio-box">
-	<img class="portrait" src="img/portrait.jpg" alt="portrait">
+	<img srcset="img/portrait.jpg 150w, img/portrait_big.jpg 220w" src="img/portrait.jpg" sizes="(max-width: 800px) 150px, 220px" class="portrait" alt="portrait">
 	<h3>Biography</h3>
 	<p>Dr. Chikashi Miyama received a MA (Sonology/2004) from Kunitachi College of Music, Tokyo, Japan, a Nachdiplom (Komposition im Elektronischen Studio/2007) from Music academy of Basel, Switzerland, and a Ph.D (Composition/2011) from University at Buffalo, New york, USA. In 2011, he received a research grant from DAAD (German Academic Exchange Service) and worked as a visiting researcher at ZKM, Karlsruhe, Germany. He has taught computer music at University at Buffalo, USA, Music Academy Basel, and College of Arts Bern, Switzerland. In 2013, His new book about PureData was published. Between 2015 and 2017, He worked as a research associate in the field of software development and developed Zirkonium Ver. 3. He is currently teaching at College of Music and Dance, Cologne, and working as a software developer at ICST Zürich.</p>
 </section>
