--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 	<div class="portfolio-box">
 		<figure>
 			<a href="https://github.com/chikashimiyama/sonorama">
-				<img src="img/sonorama.jpg" alt="Sonorama" class="work-image">
+				<img srcset="img/sonrama.jpg 170w, img/sonorama_big.jpg 240w" src="img/sonorama.jpg" sizes="(max-width: 800px) 170px, 240px" src="img/sonorama.jpg" alt="Sonorama" class="work-image">
 			</a>
 			<figcaption>Sonorama (Windows/C++)</figcaption>
 		</figure>
 		<figure >
 			<a href="http://zkm.de/zirkonium/">
-				<img src="img/zirkonium.png" alt="Zirkonium" class="work-image">
+				<img srcset="img/zirkonium.png 170w, img/zirkonium_big.png 240w" src="img/zirkonium.png" sizes="(max-width: 800px) 170px, 240px" src="img/zirkonium.png" alt="Zirkonium" class="work-image">
 			</a>
 			<figcaption>Zirkonium (MacOS/Obj-C)</figcaption>
 		</figure>
 		<figure>
 			<a href="https://itunes.apple.com/us/app/zirkpad/id1125327605?mt=8">
-				<img src="img/zirkpad.png" alt="ZirkPad" class="work-image">
+				<img srcset="img/zirkpad.png 170w, img/zirkpad_big.png 240w" src="img/zirkpad.png" sizes="(max-width: 800px) 170px, 240px" src="img/zirkpad.png" alt="Zirkpad" class="work-image">
 			</a>
 			<figcaption>ZirkPad (iOS/Swift)</figcaption>
 		</figure>
