--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div class="portfolio-box">
 		<figure>
 			<a href="https://github.com/chikashimiyama/sonorama">
-				<img srcset="img/sonrama.jpg 170w, img/sonorama_big.jpg 240w" src="img/sonorama.jpg" sizes="(max-width: 800px) 170px, 240px" alt="Sonorama" class="work-image">
+				<img srcset="img/sonorama.jpg 170w, img/sonorama_big.jpg 240w" src="img/sonorama.jpg" sizes="(max-width: 800px) 170px, 240px" alt="Sonorama" class="work-image">
 			</a>
 			<figcaption>Sonorama (Windows/C++)</figcaption>
 		</figure>
